Added setMyBio and setMyPropic. Modified the tests and the UI
