# service/api/api-handler.go
@@ -55,6 +55,8 @@ func (rt *_router) Handler() http.Handler {
 
 	// Put Routes
 	rt.router.PUT("/users/:id/username", rt.wrap(rt.setMyUserName, true))
+	rt.router.PUT("/users/:id/bio", rt.wrap(rt.setMyBio, true))
+	rt.router.PUT("/users/:id/propic", rt.wrap(rt.setMyPropic, true))
 	rt.router.PUT("/users/:id/following/:id2", rt.wrap(rt.followUser, true))
 	rt.router.PUT("/users/:id/banned/:id2", rt.wrap(rt.banUser, true))
 	rt.router.PUT("/users/:id/photos/:photoid/likes/:user_like_id", rt.wrap(rt.likePhoto, true))
