# service/api/put-setMyPropic.go
@@ -1,0 +1,60 @@
+package api
+
+import (
+	"encoding/base64"
+	"io"
+	"net/http"
+	"strconv"
+
+	"github.com/SharkGamerZ/WASAPhoto/service/api/reqcontext"
+	"github.com/julienschmidt/httprouter"
+)
+
+func (rt *_router) setMyPropic(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	w.Header().Set("Content-type", "application/json")
+
+	// Gets the id of the user
+	userID, err := strconv.Atoi(ps.ByName("id"))
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	// Checks if the user is authenticated
+	if userID != ctx.UserID {
+		http.Error(w, "Unauthorized", http.StatusUnauthorized)
+		return
+	}
+
+	// Decode the request body as a multipart form
+	err = r.ParseMultipartForm(10 << 20)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	// Get the file from the form
+	file, _, err := r.FormFile("propic")
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	defer file.Close()
+
+	// Read the file
+	fileBytes, err := io.ReadAll(file)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+
+	// Encode the image to base64
+	propicBase64 := base64.StdEncoding.EncodeToString(fileBytes)
+
+	// Update the user's profile picture
+	err = rt.db.UpdatePropic(userID, propicBase64)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+}
